--- a/app/src/main/res/layout/activity_new_student.xml
+++ b/app/src/main/res/layout/activity_new_student.xml
@@ -22,6 +22,7 @@
         android:id="@+id/textView2"
         android:layout_width="341dp"
         android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         android:text="Student Imformation"
         android:textAlignment="center"
         android:textSize="34sp"
@@ -52,19 +53,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/studentInfoName" />
 
-    <EditText
-        android:id="@+id/studentInfoClass"
-        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
-        android:layout_width="341dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="20KTPM1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/studentInfoDob" />
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -82,7 +70,7 @@
         android:layout_marginStart="32dp"
         android:text="Class"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/studentInfoClass"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
@@ -92,8 +80,9 @@
         android:layout_marginTop="28dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/studentInfoClass">
+        app:layout_constraintTop_toBottomOf="@+id/spinner">
 
         <RadioButton
             android:id="@+id/male"
@@ -129,11 +118,23 @@
     <Button
         android:id="@+id/saveBtn"
         android:layout_width="341dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Button"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#00bfff"
+        android:text="SAVE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        style="@style/Widget.AppCompat.Spinner.Underlined"
+        android:layout_width="341dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
+        android:contentDescription="select class"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/studentInfoDob" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
