--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,17 +32,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="33dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/newStudent"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="283dp"
+        android:layout_height="51dp"
+        android:backgroundTint="@color/white"
+        android:text="Add student"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:contentDescription="geg" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentlist" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
