--- a/app/src/main/res/layout/student_list_item.xml
+++ b/app/src/main/res/layout/student_list_item.xml
@@ -27,11 +27,11 @@
         android:text="name"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/studentClass"
+        app:layout_constraintBottom_toTopOf="@+id/studentInfoClass"
         app:layout_constraintStart_toEndOf="@+id/studentAvatar" />
 
     <TextView
-        android:id="@+id/studentClass"
+        android:id="@+id/studentInfoClass"
         android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
@@ -48,5 +48,5 @@
         android:layout_marginTop="8dp"
         android:text="DD/MM/YYYY"
         app:layout_constraintStart_toEndOf="@+id/studentAvatar"
-        app:layout_constraintTop_toBottomOf="@+id/studentClass" />
+        app:layout_constraintTop_toBottomOf="@+id/studentInfoClass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
