--- a/app/src/main/res/layout/activity_student_info.xml
+++ b/app/src/main/res/layout/activity_student_info.xml
@@ -13,10 +13,10 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="student name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:text="student name" />
 
     <TextView
         android:id="@+id/textView2"
@@ -48,10 +48,10 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="DD/MM/YYYY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/studentInfoName" />
+        app:layout_constraintTop_toBottomOf="@+id/studentInfoName"
+        tools:text="DD/MM/YYYY" />
 
     <TextView
         android:id="@+id/textView4"
